// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppComponent should render title 1`] = `
<ng17-demo-root
  loggedIn={[Function Function]}
  longText={[Function String]}
>
  <button
    type="button"
  >
    Logout
  </button><div>
    <p>
      This is not a long text
    </p>
    <span>
      Placeholder
    </span>
  </div>
</ng17-demo-root>
`;

exports[`AppComponent should render title 2`] = `
<ng17-demo-root
  loggedIn={[Function Function]}
  longText={[Function String]}
>
  <button
    type="button"
  >
    Logout
  </button><div>
    <p>
      This is not a long text
    </p>
    <ng17-demo-animal-ratings>
      <ul>
        <li>
          <div>
            🐻 Bear
          </div>
          <div>
            10
          </div>
        </li>
        <li>
          <div>
            🐶 Dog
          </div>
          <div>
            10
          </div>
        </li>
        <li>
          <div>
            🐱 Cat
          </div>
          <div>
            10
          </div>
        </li>
        <li>
          <div>
            🕷 Spider
          </div>
          <div>
            2
          </div>
        </li>
      </ul>
    </ng17-demo-animal-ratings>
  </div>
</ng17-demo-root>
`;
